kubernetes/apps/ai/searxng/app/service.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: searxng-app
  namespace: ai
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: searxng
    app.kubernetes.io/instance: searxng
    app.kubernetes.io/controller: searxng
    app.kubernetes.io/component: app
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: searxng-redis
  namespace: ai
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app.kubernetes.io/name: searxng
    app.kubernetes.io/instance: searxng
    app.kubernetes.io/component: redis
